[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/bugEnemy.png" type="Texture" id=1]
[ext_resource path="res://Bug/Bug.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Die",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 10 )

[node name="Bug" type="KinematicBody2D"]
collision_layer = 2147483649
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="DamageBox" type="Area2D" parent="."]

[node name="DamageBox" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 5 )

[node name="BugBox" type="Area2D" parent="."]

[node name="BugBox" type="CollisionShape2D" parent="BugBox"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )
[connection signal="body_entered" from="DamageBox" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="BugBox" to="." method="_on_BugBox_body_entered"]
